--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ html, body {
   z-index: 100;
   width: 100%;
   height: 100%;
-  background-color: #f9f9f9;
+  background-color: #401aaa;
   background-image: url("https://media.discordapp.net/attachments/945090218732716124/979602727862697994/IMG_5786.gif");
   background-repeat: no-repeat;
   background-position: center;
