--- a/style.css
+++ b/style.css
@@ -1,27 +1,10 @@
-/* CSS is how you can add style to your website, such as colors, fonts, and positioning of your
-   HTML content. To learn how to do something, just try searching Google for questions like
-   "how to change link color." */
-
-/**/
+/* default styling */
 html, body {
   margin:0;
   padding:1px;
   font-family:Verdana;
   background-color: #101014;
   color:#ededf5;
-}
-
-
-.title {
-  font-size:35px;
-  text-align:center;
-  color:#ededf5;
-}
-
-/*no button highlights*/
-.btn:focus,.btn:active {
-  outline: none;
-  box-shadow: none;
 }
 
 /*no link underline*/
@@ -42,16 +25,6 @@ html, body {
   background-position: center;
 }
 
-/*dropdown stuff
-
-<li class="dropdown">
-  <a class="" href=""></a>
-  <div class="dropdown-content">
-    <a href=""></a>
-  </div>
-</li>
-
-*/
 .dropdown {
   position:relative;
   display:inline-block;
@@ -99,17 +72,20 @@ html, body {
 
 /*navigation buttons on top*/
 #headernav { 
-  max-width:1000px;
-  background-color:#222452;
+  max-width:50vw;
   position:fixed;
-  top:10px;
+  top:5px;
   left:0px;
   right:0px;
   margin-left:auto;
   margin-right:auto;
+}
+
+#headerstyle {
   border:2px solid #edb415;
   border-radius:20px;
   font-variant:small-caps;
+  background-color:#222452;
 }
 
 #headernav a {
@@ -121,9 +97,85 @@ html, body {
   color:#edb415;
 }
 
-.navrow {
-  display:flex;
-  justify-content:space-around;
+#menu__toggle {
+  opacity:0;
+}
+#menu__toggle:checked + .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked + .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0deg);
+}
+#menu__toggle:checked + .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  left: 0 !important;
+}
+.menu__btn {
+  position: fixed;
+  top: 43px;
+  left: 20px;
+  width: 6vh;
+  height: 6vh;
+  cursor: pointer;
+  z-index: 2;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background-color:#edb415;
+  transition-duration: .25s;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -20px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 20px;
+}
+.menu__box {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 300px;
+  height: 100vh;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  background-color: #222452;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+  transition-duration: .25s;
+}
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color:#ededf5;
+  font-size: 20px;
+  text-decoration: none;
+  transition-duration: .25s;
+}
+.menu__item:hover {
+  background-color:#edb415;
+}
+
+#mobilebg {
+  background-color:#222452;
+  height:8vh;
+  width:8vh;
+  z-index:1;
+  position:fixed;
+  top:7px;
+  left:11px;
+  border-radius:10px;
 }
 
 #footercar {
